# as-cnpj-python

./: CHANGELOG.en.md  CHANGELOG.es.md  CHANGELOG.fr.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.en.md  CONTRIBUTING.es.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.es.md  README.fr.md  README.md  SECURITY.en.md  SECURITY.es.md  SECURITY.fr.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.en.md  api.es.md  api.fr.md  api.md  decisoes.en.md  decisoes.es.md  decisoes.fr.md  decisoes.md  release-checklist.en.md  release-checklist.es.md  release-checklist.fr.md  release-checklist.md
src/as_cnpj/: __init__.py  cnpj.py
test/: README.en.md  README.es.md  README.fr.md  README.md  test_cnpj.py
vectors/: cnpj.json  cnpj.schema.json
